--- a/css/_mixin.scss
+++ b/css/_mixin.scss
@@ -1,8 +1,7 @@
 $primary: #00324E;
-$second:#3297CF;
+$second:#497aa5;
 $third: #F0F6FD;
 $dcard-blue: #006AA6;
-$dark-primary: #2c3328;
 // margin
 .m0-a{
     margin: 0 auto;
@@ -270,8 +269,8 @@ $dark-primary: #2c3328;
 .second{
     color: $second;
 }
-.d-primary{
-    color: $dark-primary;
+.third{
+    color: $third;
 }
 .dcard-blue{
     color: $dcard-blue;
