--- a/css/_index.scss
+++ b/css/_index.scss
@@ -1,10 +1,10 @@
 .index{
     .banner{
-        padding-top: 50px;
-        img{
-            padding-top: 10px;
-            // height: 700px;
-        }
+        // padding-top: 50px;
+        // img{
+        //     // padding-top: 10px;
+        //     // height: 700px;
+        // }
         .pcb-slogan{
             color: $primary;
             font-size: 45px;
@@ -17,7 +17,7 @@
             .img-1{
                 width: 300px;
                 height: 400px;
-                border: 5px solid $primary;
+                border: 5px solid $third;
                 position: absolute;
                 top: 250px;
                 left: 300px;
@@ -26,7 +26,7 @@
             .img-2{
                 width: 250px;
                 height: 350px;
-                border: 5px solid $primary;
+                border: 5px solid $third;
                 position: absolute;
                 top: 380px;
                 left: 100px;
@@ -35,7 +35,6 @@
             .img-3{
                 width: 400px;
                 height: 300px;
-                border: 5px solid $primary;
                 position: absolute;
                 top: 110px;
                 z-index: 1;
@@ -58,7 +57,7 @@
             li a,.line,.fb{
                 transition: all 0.3s;
                 &:hover,&:active{
-                    color: $second;
+                    color: $dcard-blue;
                 }
             }
         }
@@ -108,7 +107,8 @@
     }
     .bg-note{
         position: relative;
-        background-image: url(../img/note1.jpeg);
+        // background-image: url(../img/note1.jpeg);
+        background-color: white;
         background-position: center;
         background-repeat: repeat-y;
         background-size: contain;
@@ -149,7 +149,7 @@
                 background-image:url(../img/tempo.jpg);
             }
             p{
-                height: 330px;
+                height: 340px;
             }
         }
     }
