--- a/css/all.css
+++ b/css/all.css
@@ -399,11 +399,11 @@ table {
 }
 
 .second {
-  color: #3297CF;
+  color: #497aa5;
 }
 
-.d-primary {
-  color: #2c3328;
+.third {
+  color: #F0F6FD;
 }
 
 .dcard-blue {
@@ -415,7 +415,7 @@ table {
 }
 
 .bg-second {
-  background-color: #3297CF;
+  background-color: #497aa5;
 }
 
 .bg-third {
@@ -438,7 +438,7 @@ table {
 body {
   font-size: 20px;
   font-family: 'Times New Roman', Times, serif,'Noto Serif','Noto Serif TC';
-  background-color: #F0F6FD;
+  background-color: white;
 }
 
 body img {
@@ -465,7 +465,7 @@ body a {
 }
 
 .header .container .menu:hover, .header .container .menu:active {
-  color: #3297CF;
+  color: #006AA6;
 }
 
 .mobileNavbar, .mobileNavbarIcon {
@@ -497,15 +497,14 @@ body a {
     transition: max-height 1s;
   }
   .mobileNavbar li {
-    background-color: #3297CF;
+    background-color: #F0F6FD;
   }
   .mobileNavbar a {
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
     color: #00324E;
   }
   .mobileNavbar a:hover, .mobileNavbar a:active {
     color: white;
+    background-color: #497aa5;
   }
   .mobileNavbarIcon {
     display: -webkit-box;
@@ -553,7 +552,7 @@ body a {
 }
 
 .footer a:hover, .footer a:active {
-  color: #3297CF;
+  color: #006AA6;
 }
 
 @media (max-width: 520px) {
@@ -566,14 +565,6 @@ body a {
   .footer {
     font-size: 16px;
   }
-}
-
-.index .banner {
-  padding-top: 50px;
-}
-
-.index .banner img {
-  padding-top: 10px;
 }
 
 .index .banner .pcb-slogan {
@@ -589,7 +580,7 @@ body a {
 .index .self-intro .pc-img .img-1 {
   width: 300px;
   height: 400px;
-  border: 5px solid #00324E;
+  border: 5px solid #F0F6FD;
   position: absolute;
   top: 250px;
   left: 300px;
@@ -599,7 +590,7 @@ body a {
 .index .self-intro .pc-img .img-2 {
   width: 250px;
   height: 350px;
-  border: 5px solid #00324E;
+  border: 5px solid #F0F6FD;
   position: absolute;
   top: 380px;
   left: 100px;
@@ -609,7 +600,6 @@ body a {
 .index .self-intro .pc-img .img-3 {
   width: 400px;
   height: 300px;
-  border: 5px solid #00324E;
   position: absolute;
   top: 110px;
   z-index: 1;
@@ -640,7 +630,7 @@ body a {
 }
 
 .index .self-intro .content li a:hover, .index .self-intro .content li a:active, .index .self-intro .content .line:hover, .index .self-intro .content .line:active, .index .self-intro .content .fb:hover, .index .self-intro .content .fb:active {
-  color: #3297CF;
+  color: #006AA6;
 }
 
 .index .test {
@@ -695,7 +685,7 @@ body a {
 
 .index .bg-note {
   position: relative;
-  background-image: url(../img/note1.jpeg);
+  background-color: white;
   background-position: center;
   background-repeat: repeat-y;
   background-size: contain;
@@ -710,7 +700,7 @@ body a {
 .index .tape {
   width: 200px;
   height: 50px;
-  background-color: #3297CF;
+  background-color: #497aa5;
   position: absolute;
   top: 0;
   left: 50%;
@@ -748,7 +738,7 @@ body a {
 }
 
 .index .weapon li p {
-  height: 330px;
+  height: 340px;
 }
 
 @media (max-width: 1200px) {
@@ -1015,7 +1005,6 @@ body a {
 
 .logline li .img-2 {
   background-image: url(../img/shoot.jpg);
-  border-bottom: 1px solid black;
 }
 
 .logline li .img-3 {
@@ -1029,12 +1018,12 @@ body a {
 .logline .content a {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  background-color: #00324E;
-  border: 1px solid #00324E;
+  background-color: #006AA6;
+  border: 1px solid #006AA6;
 }
 
 .logline .content a:hover, .logline .content a:active {
-  color: #00324E;
+  color: #006AA6;
   background-color: white;
 }
 
@@ -1144,7 +1133,7 @@ body a {
 }
 
 .video .mov-title:hover, .video .mov-title:active {
-  color: #3297CF;
+  color: #006AA6;
 }
 
 .video .mov-title:before {
