--- a/css/_experience.scss
+++ b/css/_experience.scss
@@ -1,7 +1,7 @@
 .experience{
     .banner{
-        height: 360px;
-        background: url(../img/banner3.JPG);
+        height: 400px;
+        background: url(../img/exp-banner.JPG);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -65,6 +65,13 @@
             background-color: $primary;
         }
     }
+    .bg-pic{
+        background-image: url(../img/dtto-friends-宇宙.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 630px;
+    }
     .conclusion{
         max-width: 992px;
         margin: 0 auto;
@@ -76,20 +83,9 @@
         }
         p{
             line-height: 1.8;
-            font-size: 30px;
+            font-size: 45px;
+            margin-top: 350px;
         }
-    }
-    .bg-second{
-        position: relative;
-    }
-    .tape{
-        width: 200px;
-        height: 50px;
-        background-color: $primary;
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translate(-50%, -50%);
     }
 }
 @include w900{
