--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -84,6 +84,10 @@ body{
     position: fixed;
     right: 60px;
     bottom: 60px;
+    transition: all 0.3s;
+    &:hover{
+        transform: scale(1.1);
+    }
 }
 @include mobile{ 
     .backToTop{         
@@ -103,6 +107,7 @@ body{
         transition: all 0.3s;
         &:hover,&:active{
             color: $dcard-blue;
+            transform: scale(1.05);
         }
     }
 }
