--- a/css/_mixin.scss
+++ b/css/_mixin.scss
@@ -212,6 +212,9 @@ $dcard-blue: #006AA6;
 .jcc{
     justify-content: center;
 }
+.jcsa{
+    justify-content: space-around;
+}
 
 // align-items
 .aic{
