--- a/css/_script.scss
+++ b/css/_script.scss
@@ -1,7 +1,7 @@
 .script{
     .banner{
-        height: 360px;
-        background: url(../img/banner2.jpeg);
+        height: 400px;
+        background: url(../img/script-banner.jpeg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -13,10 +13,6 @@
         h2{
             font-size: 33px;
         }
-    }
-    li p{
-        animation: fadeIn;
-        animation-duration: 1.5s;
     }
     .main{
         max-width: 992px;
@@ -33,6 +29,30 @@
             width: 70%;
             border-radius: 30px 0 30px 0;
         }
+        .dinu{
+            width: 80px;
+            height: 100px;
+        }
+        .saugy{
+            width: 70px;
+            height: 80px;
+        }
+        .zolly{
+            width: 80px;
+            height: 110px;
+        }
+        .lynn{
+            width: 70px;
+            height: 110px;
+        }
+        .hoya{
+            width: 80px;
+            height: 100px;
+        }
+    }
+    li p{
+        animation: fadeIn;
+        animation-duration: 1.5s;
     }
 }
 .logline{
