--- a/css/_video.scss
+++ b/css/_video.scss
@@ -52,6 +52,13 @@
         width: 100%;
         height: 100%;
     }
+    .bob{
+        position: absolute;
+        width: 150px;
+        height: 210px;
+        left: 100px;
+        top: 2590px;
+    }
 }
 @include mobile{
     .video{
