--- a/css/_experience.scss
+++ b/css/_experience.scss
@@ -66,11 +66,11 @@
         }
     }
     .bg-pic{
-        background-image: url(../img/dtto-friends-宇宙.jpg);
+        background-image: url(../img/dtto-universe.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        height: 630px;
+        height: 600px;
     }
     .conclusion{
         max-width: 992px;
@@ -81,12 +81,24 @@
             height:2px;
             background: white;
         }
-        p{
+        h2{
             line-height: 1.8;
             font-size: 45px;
-            margin-top: 350px;
+            margin-top: 330px;
+            text-shadow: 2px 1px black;
         }
     }
+}
+@include w1200{
+    .experience{
+        .bg-pic {
+            background-position: top;
+            height: 500px;
+        }
+        .conclusion h2{
+            margin-top: 270px;
+        }
+    } 
 }
 @include w900{
     .experience{
@@ -107,23 +119,25 @@
                 }
             }
         }
-        .conclusion{
-            p{
-                font-size: 24px;
-            }
-        }
+        .conclusion h2{
+                font-size: 40px;
+         }
     }
 }
 @include mobile{
     .experience{
-        .banner{
-            height: 350px;
-            h2{
-                margin-top: 50px;
-            }
+        .banner h2{
+            margin-top: 50px;
         }
         ul .border-line{
             width: 100%;
+        }
+        .bg-pic{
+            height: 400px;
+        }
+        .conclusion h2{
+            font-size: 30px;
+            margin-top: 180px;
         }
     }
 }
@@ -155,6 +169,9 @@
                 font-size: 18px;
             }
         }
+        .conclusion h2{
+            margin-top: 170px;
+        }
     }
 }
 @include iphone8-plus{
@@ -167,6 +184,9 @@
         }
         .content{
             padding: 25px;
+        }
+        .conclusion h2{
+            font-size: 24px;
         }
     }
 }
