--- a/css/_script.scss
+++ b/css/_script.scss
@@ -137,11 +137,8 @@
 }
 @include mobile{
     .script{
-        .banner{
-            height: 350px;
-            h2{
-                margin-top: 50px;
-            }
+        .banner h2{
+            margin-top: 50px;
         }
         .main{
             padding-top: 70px;
