--- a/css/_mixin.scss
+++ b/css/_mixin.scss
@@ -291,6 +291,9 @@ $dcard-blue: #006AA6;
 .bg-white{
     background-color: #FFF;
 }
+.bg-black{
+    background-color: #000;
+}
 .bg-dcard{
     background-color: $dcard-blue;
 }
