--- a/css/all.css
+++ b/css/all.css
@@ -698,7 +698,7 @@ body a {
 }
 
 .index .bg-pic {
-  background-image: url(../img/test.jpg);
+  background-image: url(../img/create-dtto-universe.jpg);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
